unpackaged/main/default/objects/Outreach_Engagement__c/Outreach_Engagement__c.object-meta.xml
<CustomObject>
    <label>Outreach Engagement</label>
    <nameField>
        <displayFormat>O-{0000}</displayFormat>
        <label>Outreach Engagement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outreach Engagements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>