unpackaged/main/default/objects/Outreach_Engagement__c/fields/Current_Sequence_Step_Number__c.field-meta.xml
<CustomField>
    <fullName>Current_Sequence_Step_Number__c</fullName>
    <label>Current Sequence Step Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>