unpackaged/main/default/objects/Outreach_Engagement__c/fields/Current_Sequence_Step_Type__c.field-meta.xml
<CustomField>
    <fullName>Current_Sequence_Step_Type__c</fullName>
    <label>Current Sequence Step Type</label>
    <length>64</length>
    <type>Text</type>
</CustomField>