unpackaged/main/default/objects/Outreach_Engagement__c/fields/Payroll_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payroll Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Outreach Engagements</relationshipLabel>
    <relationshipName>Outreach_Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>