unpackaged/main/default/objects/Outreach_Engagement__c/fields/Sold_By_Referred_By_Account__c.field-meta.xml
<CustomField>
    <fullName>Sold_By_Referred_By_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sold By/Referred By Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Outreach Engagements (Sold By/Referred By Account)</relationshipLabel>
    <relationshipName>Outreach_Engagements1</relationshipName>
    <type>Lookup</type>
</CustomField>